force-app/main/default/objects/Reservation__c/fields/AutoApprovalComment__c.field-meta.xml
<CustomField>
    <fullName>AutoApprovalComment__c</fullName>
    <description>Auto Approval Comment</description>
    <label>Auto Approval Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>