force-app/main/default/objects/Reservation__c/fields/CancelReason__c.field-meta.xml
<CustomField>
    <fullName>CancelReason__c</fullName>
    <description>Reservation Cancel reasons</description>
    <label>CancelReason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reduced Budget</fullName>
            </value>
            <value>
                <fullName>Insufficient Funds</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>