force-app/main/default/objects/Reservation__c/fields/CancelReasonComment__c.field-meta.xml
<CustomField>
    <fullName>CancelReasonComment__c</fullName>
    <description>Cancel Reason Comment</description>
    <label>CancelReasonComment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>