force-app/main/default/objects/Reservation__c/fields/DateRequestSubmitted__c.field-meta.xml
<CustomField>
    <fullName>DateRequestSubmitted__c</fullName>
    <label>Request Submit Time</label>
    <type>DateTime</type>
</CustomField>