force-app/main/default/objects/Reservation__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <description>Expiration date defines a date where the Reservation will be moved to the Expired status if it has not move to the reserved state.</description>
    <inlineHelpText>This date defines when the reservation will automatically expire if the reservation doesn&#39;t get approved/reserved.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>