force-app/main/default/objects/Reservation__c/fields/IsAutoApproved__c.field-meta.xml
<CustomField>
    <fullName>IsAutoApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auto-Approved</label>
    <type>Checkbox</type>
</CustomField>