force-app/main/default/objects/Reservation__c/fields/IsCapacityOverridden__c.field-meta.xml
<CustomField>
    <fullName>IsCapacityOverridden__c</fullName>
    <formula>NumberofOverriddenReservedLocations__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Capacity Overridden</label>
    <type>Checkbox</type>
</CustomField>