force-app/main/default/objects/Reservation__c/fields/Isexpirable__c.field-meta.xml
<CustomField>
    <fullName>Isexpirable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-expire will only happen when flag is checked</description>
    <label>Is expirable</label>
    <type>Checkbox</type>
</CustomField>