force-app/main/default/objects/Reservation__c/fields/NumberofOverriddenReservedLocations__c.field-meta.xml
<CustomField>
    <fullName>NumberofOverriddenReservedLocations__c</fullName>
    <label>Number of Overridden Reserved Locations</label>
    <summaryFilterItems>
        <field>ReservationLocation__c.CapacityOverride__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ReservationLocation__c.Reservation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>