force-app/main/default/objects/Reservation__c/fields/NumberofReservedLocations__c.field-meta.xml
<CustomField>
    <fullName>NumberofReservedLocations__c</fullName>
    <label>Number of Reserved Locations</label>
    <summaryFilterItems>
        <field>ReservationLocation__c.Status__c</field>
        <operation>equals</operation>
        <value>Reserved</value>
    </summaryFilterItems>
    <summaryForeignKey>ReservationLocation__c.Reservation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>