force-app/main/default/objects/Reservation__c/fields/PendingExpirationNotified__c.field-meta.xml
<CustomField>
    <fullName>PendingExpirationNotified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Expiration Notified</label>
    <type>Checkbox</type>
</CustomField>