force-app/main/default/objects/Reservation__c/fields/PrimaryAccount__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary account that is responsible for the reservation.</description>
    <inlineHelpText>The primary account that is responsible for the reservation.</inlineHelpText>
    <label>Primary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>