force-app/main/default/objects/Reservation__c/fields/PrimaryOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PrimaryOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>