force-app/main/default/objects/Reservation__c/fields/RequestedLocations__c.field-meta.xml
<CustomField>
    <fullName>RequestedLocations__c</fullName>
    <description>The quantity of locations at which that the client has requested to do the event</description>
    <inlineHelpText>The quantity of locations at which that the client has requested to do the event</inlineHelpText>
    <label>Requested Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>