force-app/main/default/objects/Reservation__c/fields/RequestPending__c.field-meta.xml
<CustomField>
    <fullName>RequestPending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Pending</label>
    <type>Checkbox</type>
</CustomField>