force-app/main/default/objects/Reservation__c/fields/RequestStatus__c.field-meta.xml
<CustomField>
    <fullName>RequestStatus__c</fullName>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Reservation</fullName>
            </value>
            <value>
                <fullName>Pending Cancellation</fullName>
            </value>
            <value>
                <fullName>Pending Expiration</fullName>
            </value>
            <value>
                <fullName>Pending UnReserve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>