force-app/main/default/objects/Reservation__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The service that is being reserved.</description>
    <inlineHelpText>The service that is being reserved.</inlineHelpText>
    <label>Service</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Choose a product that has a valid OH Service template mapped.</errorMessage>
        <filterItems>
            <field>Product2.Service__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>