force-app/main/default/objects/Reservation__c/recordTypes/PendingApproval.recordType-meta.xml
<RecordType>
    <fullName>PendingApproval</fullName>
    <active>true</active>
    <description>Pending Approval</description>
    <label>Pending Approval</label>
</RecordType>