force-app/main/default/objects/Reservation__c/validationRules/Disallow_Product_change_after_locations.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_Product_change_after_locations</fullName>
    <active>true</active>
    <description>Do not allow a product to be changed after adding reservation locations</description>
    <errorConditionFormula>AND (ISCHANGED( Service__c ), NumberofReservedLocations__c &gt; 0)</errorConditionFormula>
    <errorMessage>Cannot change service (product), after adding reservation locations. Remove all locations and retry.</errorMessage>
</ValidationRule>